Thu Aug 21 18:15:11 2003  Joern Thyssen  <jth@gnubg.org>

	* evalc. (DumpPosition): ensure "eval" reports cubeless money
	equituies rather than cubeless equity.
	(reported by Chris D. Yep)

Thu Aug 21 07:16:42 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gtkgame.c: Fix manually setting skill to 'good'.

Wed Aug 20 19:20:51 2003  Joern Thyssen  <jth@gnubg.org>

	Restore abs. ratings using the formulae provided by
	Kees van den Doel.

	* gnubg.c: new command "set ratingoffset .."
	* gnubg.c (CommandSaveSettings): save rating offset.
	* set.c (CommandSetRatingOffset): new function.
        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): show abs. rating.
	* analysis (absoluteFIBSRating): use formulae provided by Kees.

Mon Aug 18 19:41:07 2003  Holger Bochnig <hbgg@gmx.net>

	* gtkrace.c: bug fix: race theory window didn't even fit on 1024x768

Mon Aug 18 18:54:36 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkbearoff.c (ToggleWho, BearoffSet): remove debug printf.
	(reported by Oeystein)

Mon Aug 18 17:51:45 2003  Joern Thyssen  <jth@gnubg.org>

	* external.c (CommandExternal), play.c (ComputerTurn):
	another attempt to fix the resign bug.

Mon Aug 18 17:38:07 2003  Joern Thyssen  <jth@gnubg.org>

	* external.c (CommandExternal): copy Joseph's resignation fix.

Mon Aug 18 13:12:05 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* play.c: fix resignation bug.

Sun Aug 17 17:41:58 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>

	* rollout.c - ensure the eval context stored with a rollut has
	  the cubeful/cubeless flags consistent (some exports reported
	  incorrectly that portions were cubeful when they weren't)

Sun Aug 17 12:38:22 2003  Joern Thyssen  <jth@gnubg.org>

	* analysis.c (DumpStatcontext): fix typo.

Sun Aug 17 12:15:31 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubgmodule.c: remove C++ style variable decl. inside code.

Sun Aug 17  8:45:30 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>
